# connectome

./: .envrc  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .releaserc.json  CLAUDE.md  commitlint.config.js  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: release.yaml
.taskmaster/: config.json  state.json
docs/: APIDocs.md  APISchema.json  DataStructure.md  DevelopmentPhases.md  SystemArchitecture.md  TechStack.md  UXFlow.md
docs/Claude/: Git.md  Python.md
docs/Phases/: phase00-prd.md  phase01-prd.md  phase02-prd.md  phase03-prd.md  phase04-prd.md  phase05-prd.md  phase06-prd.md  phase07-prd.md  phase08-prd.md
nix/: checks.nix  python.nix
nix/apps/: default.nix  python.nix
nix/docker/: default.nix
nix/shells/: base-config.nix  common.nix  default.nix  go.nix  minimal.nix  nodejs.nix  python.nix  rust.nix
nix/uv2nix/: default.nix  overlays.nix  python-sets.nix  virtualenv.nix  workspace-overrides.nix
scripts/: build-release.sh  prepare-release.sh  publish-release.sh
src/connectome_mcp/: __init__.py  main.py
