# Connectome mcp server

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connectome_mcp"]

[project.scripts]
connectome-mcp-cli = "connectome_mcp.cli:app"
connectome-mcp = "connectome_mcp.main:main"

[project.optional-dependencies]
dev = [
    # Make dev process pretty
    "typer",
    "rich",
    "shellingham",
    "colorama",
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.2",  # For testing async client
    # Development tools
    "ty",
    "ruff>=0.1",
    "isort>=5.12.0",
]

[project]
name = "connectome-mcp"
version = "0.1.0"
description = "MCP server for the Connectome project"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Batuhan Baserdem", email = "baserdemb@gmail.com" }
]
maintainers = [
    { name = "Batuhan Baserdem", email = "baserdemb@gmail.com" }
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-include = ["*.pyi"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "PL",   # pylint
    "PTH",  # flake8-use-pathlib
]
ignore = ["PLR0913"]  # Too many arguments

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests",
    "temporal: marks tests that require Temporal",
    "requires_auth: marks tests that require Cognito authentication",
    "performance: marks tests as performance tests",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["src/connectome_mcp"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ty.environment]
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]  # adjust to match your layout [1]
exclude = [
  "**/.venv/**",
  "**/.ruff_cache/**",
  "**/.mypy_cache/**",
  "**/__pycache__/**",
  "build/**",
  "dist/**",
]

[tool.ty.terminal]
# Optional: control output formatting/width; useful in CI logs.
output-format = "concise"
